--- a/responsive.css
+++ b/responsive.css
@@ -43,9 +43,9 @@ a{
 .menu-items li{
     margin: 0 10px;
     font-size: 24px;
-    width: 110px;
-    height: 30px;
-    line-height: 30px;
+    width: 120px;
+    height: 40px;
+    line-height: 40px;
     text-align: center;
     background: black;
     display: block;
@@ -58,26 +58,6 @@ a{
     text-decoration: none;
     font-weight: 500;
 }
-/*
-<div class="header-wrap">
-    <div class="navbar">
-        <div class="navbar-logo-box">
-            <h1 class="navbar-logo">Fadismoqy</h1>
-        </div>
-        <ul class="menu-items">
-            <li><a class="item1" href="#">Home</a></li>
-            <li><a class="item3" href="#">About us</a></li>
-            <li><a class="item2" href="#">Contact</a>
-                <ul class="item2-ul">
-                    <li class="item2-li1 item2-li"><a href="#">Phone</a></li>
-                    <li class="item2-li2 item2-li"><a href="#">Email</a></li>
-                </ul>
-            </li>
-            <li><a class="item4" href="#">Location</a></li>
-        </ul>
-    </div>
-</div>
-*/
 .menu-items li ul li{
     display: none;
     transition: all .3s linear;
@@ -89,5 +69,44 @@ a{
 
 .main-header{
     height: calc(100vh - 70px);
-    background: red
+    display: flex;
+    align-items: center;
+}
+.main-header-box{
+}
+/*
+<div class="main-header">
+<h1>Welcome to our page</h1>
+<p>
+    Click the bottom below to become a member
+</p>
+<a href="#">Become a member</a>
+</div>
+*/
+.main-header h1{
+    font-size: 50px;
+    text-shadow: 2px 2px black;
+    color: rgb(255, 255, 255);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-bottom: 15px
+}
+.main-header p{
+    color: rgb(255, 255, 255);
+    text-shadow: 1px 1px black;
+    font-size: 18px;
+    margin-bottom: 40px;
+}
+.main-header a{
+    box-sizing: border-box;
+    color: white;
+    background: #03122B;
+    font-size: 18px;
+    padding: 15px 30px;
+    border-radius: 5px;
+    transition: all .1s linear;
+    text-shadow: 2px 2px rgb(0, 0, 0);
+}
+.main-header a:hover {
+    border-radius: 20px;
+    font-size: 20px;
 }
