--- a/responsive.css
+++ b/responsive.css
@@ -26,15 +26,6 @@ a{
     justify-content: space-between;
     align-items: center;
 }
-
-
-
-
-
-
-
-
-
 .menu-items{
     list-style: none; 
     opacity: .8;
@@ -50,8 +41,6 @@ a{
     background: black;
     display: block;
     opacity: .8;
-
-    
 }
 .menu-items li a{
     color: #ccc;
@@ -66,23 +55,11 @@ a{
 .menu-items li:hover ul li{
     display: block;
 }
-
 .main-header{
     height: calc(100vh - 70px);
     display: flex;
     align-items: center;
 }
-.main-header-box{
-}
-/*
-<div class="main-header">
-<h1>Welcome to our page</h1>
-<p>
-    Click the bottom below to become a member
-</p>
-<a href="#">Become a member</a>
-</div>
-*/
 .main-header h1{
     font-size: 50px;
     text-shadow: 2px 2px black;
@@ -105,8 +82,10 @@ a{
     border-radius: 5px;
     transition: all .1s linear;
     text-shadow: 2px 2px rgb(0, 0, 0);
+    border: 2px solid white;
+    box-shadow: 5px 9px 10px 0px rgba(0,0,0,0.75);
 }
 .main-header a:hover {
-    border-radius: 20px;
     font-size: 20px;
+    box-shadow: 0px 5px 17px -2px rgba(255, 255, 255, 0.75);
 }
