--- a/responsive.css
+++ b/responsive.css
@@ -65,7 +65,7 @@ a{
     text-shadow: 2px 2px black;
     color: rgb(255, 255, 255);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin-bottom: 15px
+    margin-bottom: 15px;
 }
 .main-header p{
     color: rgb(255, 255, 255);
@@ -88,4 +88,78 @@ a{
 .main-header a:hover {
     font-size: 20px;
     box-shadow: 0px 5px 17px -2px rgba(255, 255, 255, 0.75);
+}
+
+.ger{
+    display: none;
+}
+.menu-box{
+    display: flex;
+}
+
+/*   Media queries*/
+
+@media  screen and (max-width: 1300px){
+    .header-wrap{
+        width: 90%;
+    }
+}
+@media screen and (max-width: 900px){
+    .header-wrap{
+        width: 100vw;
+        margin: 0 30px;
+    }
+    .burger{
+        font-size: 30px;
+        display: block;
+        margin-right: 80px;
+    }
+    .main-header{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .main-header-box{
+        text-align: center;
+    }
+    .main-header-box h1{
+        margin-bottom: 20px;
+    }
+    .menu-items{
+        transition: all .5s linear;
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        top: 0;
+        right: -270;
+        height: 100vh;
+        width: 270px;
+        opacity: 1;
+    }
+
+    .menu-box{
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        width: 100%;
+        padding: 250px 65px;
+        background-color: rgba(255, 255, 255, 1);
+    }
+    .menu-items li{
+        padding-bottom: 5px;
+        margin: 0;
+        background: none;
+        font-size: 30px;
+    }
+    .menu-items li a{
+        color: black;
+    }
+    .x-icon{
+        display: block;
+        position: absolute;
+        font-size: 24px;
+        top: 20px;
+        left: 20px;
+        color: black;
+    }
 }
