--- a/responsive.css
+++ b/responsive.css
@@ -93,6 +93,9 @@ a{
 .ger{
     display: none;
 }
+.burger{
+    text-shadow: 2px 2px 2px white;
+}
 .menu-box{
     display: flex;
 }
@@ -105,6 +108,13 @@ a{
     }
 }
 @media screen and (max-width: 900px){
+    .main-header{
+        min-height: 100vh;
+        min-width:100vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
     .header-wrap{
         width: 100vw;
         margin: 0 30px;
@@ -114,10 +124,8 @@ a{
         display: block;
         margin-right: 80px;
     }
-    .main-header{
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    body{
+        overflow: hidden;
     }
     .main-header-box{
         text-align: center;
@@ -126,14 +134,15 @@ a{
         margin-bottom: 20px;
     }
     .menu-items{
+        max-height: 100vh;
+        max-width: 270px;
         transition: all .5s linear;
-        position: absolute;
+        position: fixed;
         display: flex;
         flex-direction: column;
         top: 0;
-        right: -270;
+        right: -270px;
         height: 100vh;
-        width: 270px;
         opacity: 1;
     }
 
@@ -144,6 +153,7 @@ a{
         width: 100%;
         padding: 250px 65px;
         background-color: rgba(255, 255, 255, 1);
+        
     }
     .menu-items li{
         padding-bottom: 5px;
